sandbox/output
Reorder.java:12: error: cannot find symbol
                ArrayList<List<Integer>> temp = new ArrayList<list<Integer>>();
                                                              ^
  symbol:   class list
  location: class Reorder
1 error
